--- a/RobotArmNoSPI/.cproject
+++ b/RobotArmNoSPI/.cproject
@@ -194,4 +194,5 @@
 			<resource resourceType="PROJECT" workspacePath="/RobotArmNoSPI"/>
 		</configuration>
 	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
 </cproject>
